--- a/index.html
+++ b/index.html
@@ -60,5 +60,60 @@
         </div>
       </div>
     </div>
+    <div class="wrapper-content content">
+      <aside class="profile">
+        <img class="avatar" src="/images/avatar.png" alt="Someone" />
+        <h1>Someone Stone</h1>
+        <span>@someone</span>
+        <p>
+          Web Design & Rcok'n roll Partner/UI Designet @spade_be Musician in
+          @dashboxmusic
+        </p>
+
+        <ul class="list">
+          <li><img src="/images/place.svg" alt="place" /> Namur, Belgium</li>
+          <li><img src="/images/url.svg" alt="URL" />someone.com</li>
+          <li><img src="/images/joined.svg" alt="joined" />Joined June 2019</li>
+          <li>
+            <img src="/images/born.svg" alt="born" />Born the 20th of June 1978
+          </li>
+        </ul>
+
+        <div class="widget followers">
+          <strong>
+            <img src="/images/followers.svg" alt="followers" />73 followers that
+            you know
+          </strong>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+
+        <div class="widget images">
+          <strong>
+            <img src="/images/images.svg" alt="images" />276 Photos and videos
+          </strong>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </aside>
+      <section class="timeline">timeline</section>
+      <aside class="widgets">widgets</aside>
+    </div>
   </body>
 </html>
