--- a/index.html
+++ b/index.html
@@ -112,7 +112,159 @@
           </ul>
         </div>
       </aside>
-      <section class="timeline">timeline</section>
+      <section class="timeline">
+        <nav>
+          <a href="" class="active">Tweet</a>
+          <a href="">Tweet and Replies</a>
+          <a href="">Media</a>
+        </nav>
+        <ul class="tweets">
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>André Praeiro <span> @andrepraeiro</span></strong>
+              <p>
+                This is a sample text of a tweet. So this is a fake tweet. Don't
+                believe it.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="retweets" />
+                  10
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Likes" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>André Praeiro <span> @andrepraeiro</span></strong>
+              <p>
+                This is a sample text of a tweet. So this is a fake tweet. Don't
+                believe it.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="retweets" />
+                  10
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Likes" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>André Praeiro <span> @andrepraeiro</span></strong>
+              <p>
+                This is a sample text of a tweet. So this is a fake tweet. Don't
+                believe it.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="retweets" />
+                  10
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Likes" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>André Praeiro <span> @andrepraeiro</span></strong>
+              <p>
+                This is a sample text of a tweet. So this is a fake tweet. Don't
+                believe it.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="retweets" />
+                  10
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Likes" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>André Praeiro <span> @andrepraeiro</span></strong>
+              <p>
+                This is a sample text of a tweet. So this is a fake tweet. Don't
+                believe it.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="retweets" />
+                  10
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Likes" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>André Praeiro <span> @andrepraeiro</span></strong>
+              <p>
+                This is a sample text of a tweet. So this is a fake tweet. Don't
+                believe it.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="retweets" />
+                  10
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Likes" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
       <aside class="widgets">
         <div class="widget follow">
           <div class="title">
